Animation fixed had to use different animation format and figured out how to view my localhost website on mobile, dont have to commit and update my live hosted web to test, thank god

--- a/src/components/UI/ContactForm/ContactForm.css
+++ b/src/components/UI/ContactForm/ContactForm.css
@@ -142,28 +142,24 @@
 }
 
 .loading:after {
+  overflow: hidden;
   display: inline-block;
-  position: absolute;
-  width: 1px;
-  animation: dotty steps(1, end) 1.4s infinite;
-  content: "";
+  vertical-align: bottom;
+  -webkit-animation: ellipsis steps(4, end) 1200ms infinite;
+  animation: ellipsis steps(4, end) 1200ms infinite;
+  content: "\2026"; /* ascii code for the ellipsis character */
+  width: 0px;
 }
 
-@keyframes dotty {
-  0% {
-    content: "";
+@keyframes ellipsis {
+  to {
+    width: 20px;
   }
-  25% {
-    content: ".";
-  }
-  50% {
-    content: "..";
-  }
-  75% {
-    content: "...";
-  }
-  100% {
-    content: "";
+}
+
+@-webkit-keyframes ellipsis {
+  to {
+    width: 20px;
   }
 }
 
